# fks_docs

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  README.md  debug-start.sh  docker-compose.yml  start.sh
docs/: ARCHITECTURE_OVERVIEW.md  AUTHENTIK_FIRST_GOOGLE_ALTERNATIVE_SETUP.md  AUTHENTIK_RESTART_ISSUE_RESOLVED.md  AUTO_UPDATE_QUICK_REFERENCE.md  AUTO_UPDATE_README.md  BUILDS_ONLY_QUICK_REFERENCE.md  CANADIAN_ACCOUNTS_UPDATE.md  CIRCUIT_BREAKERS_AND_RUNTIME_OVERRIDES.md  CLOUDFLARE_SSL_SECRETS.md  COMPLETE_SCRIPT_ORGANIZATION.md  COMPLETE_WORKFLOW_SUMMARY.md  DEPLOY_SCRIPT_FIX.md  DEPLOY_WAIT_FIX.md  DISCORD_NOTIFICATION_FIX.md  DNS_SERVER_MANAGEMENT_ENHANCEMENT.md  DOCKER_BUILD_OPTIMIZATION_SUMMARY.md  DOCKER_IPTABLES_FIX.md  DOCKER_IPTABLES_INTEGRATION.md  DOCKER_SSL_FIX_SUMMARY.md  ENVIRONMENT_GUIDE.md  ENVIRONMENT_QUICK_REFERENCE.md  FINANCIAL_TARGETS_GUIDE.md  FKS_SERVICES_ARCHITECTURE_SUMMARY.md  FRONTEND_METRICS.md  FRONTEND_REFACTOR_PLAN.md  FRONTEND_STRUCTURE.md  FUTURES_BETA_SETUP.md  GAMIFICATION_REVIEW_COMPLETE.md  GITHUB_ACTIONS_REVIEW_FIXES.md  GITHUB_SECRETS.txt  GITHUB_SECRETS_CONFIGURATION.md  GITHUB_SECRETS_FKS.md  GITHUB_SECRETS_SETUP.md  GITHUB_SECRETS_SETUP_GUIDE.md  GITHUB_SECRETS_UPDATE.md  GOOGLE_CALENDAR_OAUTH_INTEGRATION.md  GOOGLE_CALENDAR_SETUP.md  GOOGLE_OAUTH_SETUP_COMPLETE.md  GOOGLE_PROJECTS_CONFIGURATION.md  GPU_SERVICES_GUIDE.md  (+45 more)
docs/architecture/: ADR-001-high-level-topology.md
docs/archived/: ARCH_LINUX_FIXES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  (+77 more)
src/: lib.rs  listing.rs  main.rs  model.rs  search.rs  server.rs
(+1 files in other folders)
